--- a/tt-server/Dockerfile
+++ b/tt-server/Dockerfile
@@ -1,5 +1,6 @@
 FROM nvidia/cuda:11.8.0-base-ubuntu22.04
 WORKDIR /server
+VOLUME /data
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -y
@@ -16,5 +17,6 @@ COPY README.md ./
 COPY entrypoint.sh ./
 
 RUN poetry install --no-dev
+
 
 CMD ["poetry", "run", "./entrypoint.sh"]
