--- a/tt-server/pyproject.toml
+++ b/tt-server/pyproject.toml
@@ -15,6 +15,7 @@ Flask-Migrate = "^3.1.0"
 alembic = "^1.8.1"
 psycopg2-binary = "^2.9.5"
 pycolmap = "^0.3.0"
+numpy = "^1.23.4"
 
 
 [build-system]
