--- a/tt-pg/Dockerfile
+++ b/tt-pg/Dockerfile
@@ -1,4 +1,5 @@
-FROM postgres
+FROM postgis/postgis
+COPY postgis.sql /docker-entrypoint-initdb.d/
 EXPOSE 5432
 ENV POSTGRES_PASSWORD=postgres
 CMD ["postgres"]
