--- a/tt-server/pyproject.toml
+++ b/tt-server/pyproject.toml
@@ -19,6 +19,7 @@ GeoAlchemy2 = "^0.12.5"
 shapely = "^1.8.5.post1"
 requests = "^2.28.1"
 open3d = {file = "open3d-0.16.0-cp39-cp39-manylinux_2_27_x86_64.whl"}
+opencv-python = "^4.7.0.72"
 
 [tool.poetry.group.dev.dependencies]
 Faker = "^15.3.2"
